--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
       rel="stylesheet"
     />
 
+    <script
+      defer
+      src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
+      integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
+      crossorigin=""
+    ></script>
+
     <link rel="stylesheet" href="style.css" />
 
     <link
